--------------------------------------------------------------------------
---------                Ampache -- CHANGELOG                    ---------   
--------------------------------------------------------------------------

--------------------------------------------------------------------------
  v.3.6-Alpha1
	- Added ability to rate Albums of the Moment
	- Added ability to edit/delete playlists while they are displayed
	- Fix track numbers not being 0 padded when downloading or renaming.
	- Rating search now allows specification of operator (>=, <=, or =)
		and uses the same ratings as normal display.
	- Add -t to catalog_update.inc for generating thumbnails
	- Generate Thumbnails during catalog art operations
	- Fixed transcode seeking of Flacs by switching to MM:SS format for
		flacs being transcoded
	- Change album_art_order to art_order to reflect general nature of
		config option
	- Fix PHP warning with IP History if no data is found.
	- Add -g flag to catalog update to allow for art gathering via cmdline
	- Change Update frequency of catalog display to 1 second rather then
		%10 reduces cpu load due to javascript excution (Thx Dmole)
	- Add bmp to the list of allowed / supported album art types
	- Strip extranious whitespace from cmdline catalog update (Thx ascheel)
        - Fix catalog size math for catalogs up to 4TB (Thx Joost.t.Hart@planet.nl) 
        - Fix httpq not correctly skipping to new song 
        - Fix refreshing of localplay playlist when an item is skipped to
        - Fix missing Content-Disposition filename= on non-transcoded songs
	- Fix refresh of localplay playlist when you delete a track from it
	- Added ability to add Ampache as a search descriptor (Thx Vlet)
	- Correct issue with single song downloads
	- Removed old useless files
	- Added local auth method that uses PHP's PAM module
	- Correct potential security issues due to misuse of REQUEST for write
		operations rather then POST 