@@ -305,7 +305,7 @@ switch ($_REQUEST['action']) {
 			$catalog = new Catalog($catalog_id);
 			require Config::get('prefix') . '/templates/show_gather_art.inc.php';
 			flush();
-			$catalog->get_album_art('',1);
+			$catalog->get_art('',1);
 		}
 		$url 	= Config::get('web_path') . '/admin/catalog.php';
 		$title 	= _('Album Art Search Finished');
