@@ -4,6 +4,7 @@
 
 --------------------------------------------------------------------------
   v.3.6-Alpha1
+        - Fixed support for requesting different thumbnail sizes
 	- Added ability to rate Albums of the Moment
 	- Added ability to edit/delete playlists while they are displayed
 	- Fix track numbers not being 0 padded when downloading or renaming.
